// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyInPerson renders BCSC photo card process with serial number and "your BC Services Card" bullet 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        false,
        {
          "gap": 16,
          "padding": 24,
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            undefined,
          ]
        }
      >
        BCSC.VerifyIdentity.VerifyInPersonTitle
      </Text>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.WhereToGo
        </Text>
        <Text
          accessibilityLabel="BCSC.VerifyIdentity.WhereToGoLink"
          accessibilityRole="link"
          accessible={true}
          maxFontSizeMultiplier={2}
          onPress={[Function]}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#1A5A96",
                  "textDecorationLine": "underline",
                },
                {},
              ],
            ]
          }
          testID="com.ariesbifold:id/ServiceBCLink"
        >
          BCSC.VerifyIdentity.WhereToGoLink
        </Text>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.WhatToBring
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                {
                  "marginRight": 4,
                },
              ]
            }
          >
            •
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.VerifyIdentity.ThisDevice
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                {
                  "marginRight": 4,
                },
              ]
            }
          >
            •
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.VerifyIdentity.YourBCServicesCard
          </Text>
        </View>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.ShowThisConfirmationNumber
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 32,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
                "letterSpacing": 7,
                "marginBottom": 16,
              },
            ]
          }
          testID="com.ariesbifold:id/ConfirmationCode"
        >
          1234-5678
        </Text>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.YouMustCompleteThisBy
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 32,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 24,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 14,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        BCSC.VerifyIdentity.CardSerialNumber
      </Text>
    </View>
    <View
      style={
        {
          "flexGrow": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -3,
              "width": 0,
            },
            "shadowOpacity": 0.9,
            "shadowRadius": 3,
            "top": 0,
            "zIndex": -1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F2F2F2",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "flexGrow": 1,
            "gap": 8,
            "padding": 24,
          }
        }
      >
        <View
          accessibilityLabel="BCSC.VerifyIdentity.Complete"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#003366",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/Complete"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                    false,
                  ],
                ]
              }
            >
              BCSC.VerifyIdentity.Complete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`VerifyInPerson renders NonBCSC card process without serial number and with evidence types bullet 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        false,
        {
          "gap": 16,
          "padding": 24,
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            undefined,
          ]
        }
      >
        BCSC.VerifyIdentity.VerifyInPersonTitle
      </Text>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.WhereToGo
        </Text>
        <Text
          accessibilityLabel="BCSC.VerifyIdentity.WhereToGoLink"
          accessibilityRole="link"
          accessible={true}
          maxFontSizeMultiplier={2}
          onPress={[Function]}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#1A5A96",
                  "textDecorationLine": "underline",
                },
                {},
              ],
            ]
          }
          testID="com.ariesbifold:id/ServiceBCLink"
        >
          BCSC.VerifyIdentity.WhereToGoLink
        </Text>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.WhatToBring
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                {
                  "marginRight": 4,
                },
              ]
            }
          >
            •
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.VerifyIdentity.ThisDevice
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                {
                  "marginRight": 4,
                },
              ]
            }
          >
            •
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.VerifyIdentity.YourID Passport, Driver’s License
          </Text>
        </View>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.ShowThisConfirmationNumber
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 32,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
                "letterSpacing": 7,
                "marginBottom": 16,
              },
            ]
          }
          testID="com.ariesbifold:id/ConfirmationCode"
        >
          1234-5678
        </Text>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.YouMustCompleteThisBy
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 32,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 24,
        }
      }
    />
    <View
      style={
        {
          "flexGrow": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -3,
              "width": 0,
            },
            "shadowOpacity": 0.9,
            "shadowRadius": 3,
            "top": 0,
            "zIndex": -1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F2F2F2",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "flexGrow": 1,
            "gap": 8,
            "padding": 24,
          }
        }
      >
        <View
          accessibilityLabel="BCSC.VerifyIdentity.Complete"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#003366",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/Complete"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                    false,
                  ],
                ]
              }
            >
              BCSC.VerifyIdentity.Complete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`VerifyInPerson renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        false,
        {
          "gap": 16,
          "padding": 24,
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            undefined,
          ]
        }
      >
        BCSC.VerifyIdentity.VerifyInPersonTitle
      </Text>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.WhereToGo
        </Text>
        <Text
          accessibilityLabel="BCSC.VerifyIdentity.WhereToGoLink"
          accessibilityRole="link"
          accessible={true}
          maxFontSizeMultiplier={2}
          onPress={[Function]}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#1A5A96",
                  "textDecorationLine": "underline",
                },
                {},
              ],
            ]
          }
          testID="com.ariesbifold:id/ServiceBCLink"
        >
          BCSC.VerifyIdentity.WhereToGoLink
        </Text>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.WhatToBring
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                {
                  "marginRight": 4,
                },
              ]
            }
          >
            •
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.VerifyIdentity.ThisDevice
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                {
                  "marginRight": 4,
                },
              ]
            }
          >
            •
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.VerifyIdentity.YourBCServicesCard
          </Text>
        </View>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.ShowThisConfirmationNumber
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 32,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
                "letterSpacing": 7,
                "marginBottom": 16,
              },
            ]
          }
          testID="com.ariesbifold:id/ConfirmationCode"
        >
          undefined-undefined
        </Text>
      </View>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.VerifyIdentity.YouMustCompleteThisBy
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 32,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 24,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 14,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        BCSC.VerifyIdentity.CardSerialNumber
      </Text>
    </View>
    <View
      style={
        {
          "flexGrow": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -3,
              "width": 0,
            },
            "shadowOpacity": 0.9,
            "shadowRadius": 3,
            "top": 0,
            "zIndex": -1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F2F2F2",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "flexGrow": 1,
            "gap": 8,
            "padding": 24,
          }
        }
      >
        <View
          accessibilityLabel="BCSC.VerifyIdentity.Complete"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#003366",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/Complete"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                    false,
                  ],
                ]
              }
            >
              BCSC.VerifyIdentity.Complete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
